# dotenvage

./: .envrc  .gitignore  CLAUDE.md  Cargo.toml  README.md  package.json
.cargo/: config.toml
.github/workflows/: auto-version-bump.yml  ci.yml  dependabot-auto-merge.yml
npm/: package.json  pnpm-lock.yaml
npm/__tests__/: nextjs-integration.test.js
npm/dotenvage-napi/: Cargo.toml
npm/dotenvage-napi/src/: lib.rs
python/: README.md  pyproject.toml
python/dotenvage-pyo3/: Cargo.toml
python/tests/: test_basic.py
src/: error.rs  lib.rs  loader.rs  main.rs  manager.rs
tests/: foreign_key_tolerance.rs  keychain_integration.rs  keygen_store.rs  lib_write_api.rs
