[workspace]
members = ["npm/dotenvage-napi", "python/dotenvage-pyo3"]
resolver = "2"

[workspace.package]
version = "0.6.2"
edition = "2024"
authors = ["Jacobus Geluk <jacobus.geluk@dataroad.com>"]
repository = "https://github.com/dataroadinc/dotenvage"
rust-version = "1.94.1"
license-file = "LICENSE"

[package]
name = "dotenvage"
description = "Dotenv with age encryption: encrypt/decrypt secrets in .env files"
version = "0.6.2"
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
license-file.workspace = true
keywords = ["dotenv", "age", "encryption", "secrets", "cli"]
categories = ["cryptography", "config", "command-line-utilities"]
readme = "README.md"
documentation = "https://docs.rs/dotenvage"
homepage = "https://github.com/dataroadinc/dotenvage"
publish = true

exclude = [
    ".cargo/",
    ".clippy.toml",
    ".cursor/",
    ".github/",
    ".gitignore",
    ".rust-toolchain.toml",
    ".vscode/",
    "CONTRIBUTING.md",
    "cog.toml",
    "rustfmt.toml",
    "scripts/",
    "npm/",
]

[lib]
name = "dotenvage"
path = "src/lib.rs"

[[bin]]
name = "dotenvage"
path = "src/main.rs"

[features]
default = ["os-keychain"]
os-keychain = [
    "dep:keyring-core",
    "dep:apple-native-keyring-store",
    "dep:linux-keyutils-keyring-store",
    "dep:windows-native-keyring-store",
]

[dependencies]
age = { version = "0.11.3", features = ["armor"] }
base64 = "0.22"
thiserror = "2.0"
anyhow = "1.0"
dotenvy = "0.15"
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
tempfile = "3.27"
serde_json = "1.0"
keyring-core = { version = "1.0", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1.0", features = ["keychain"], optional = true }
security-framework = "3.7"

[target.'cfg(target_os = "linux")'.dependencies]
linux-keyutils-keyring-store = { version = "1.0", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = { version = "1.0", optional = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["user"] }

[build-dependencies]
rhusky = "0.0.2"

[dev-dependencies]
serial_test = "3.4.0"
assert_cmd = "2.2.1"
predicates = "3.1"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.{ archive-format }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "zip"

[package.metadata.version-info]
pre_bump_hooks = [
    "./scripts/sync-npm-version.sh {{version}}"
]
additional_files = [
    "npm/package.json",
    "python/pyproject.toml",
    "package.json"
]
