[package]
name = "dotenvage-napi"
description = "Node.js bindings for dotenvage using NAPI-RS"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
license-file.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dotenvage = { path = "../../" }
age = { version = "0.11.2", features = ["armor"] }
napi = { version = "3.8.3", default-features = false, features = [
    "napi6",
    "napi7",
    "serde-json",
] }
napi-derive = "3.5.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
napi-build = "2.3.1"

[dev-dependencies]
napi = { version = "3.8.3", features = ["napi6", "napi7"] }
